# netcat-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: client.rs  common.rs  main.rs  server.rs  stream.rs  tls.rs
test/: ca-csr.json  gen-cert-cfssl.sh  gen-cert-openssl.sh  gen-cert.sh  server.json
