[package]
name = "netcat"
authors = ["Binoy Jayan <binoyjayan@gmail.com>"]
description = "A simple netcat clone in Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
rustls-pemfile = "2.1.2"
rustls-pki-types = "1.7.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-rustls = "0.26.0"
webpki-roots = "0.26.2"

